add management API
